Wrap long (crazy idiotic long strings) as Article Titles (Fixes #5525 )

--- a/administrator/templates/hathor/less/template.less
+++ b/administrator/templates/hathor/less/template.less
@@ -3510,3 +3510,7 @@ div.toggle-editor {
 .module-edit {
 	display: inline-block;
 }
+.break-word {
+	word-break: break-all;
+	word-wrap: break-word;
+}
