--- a/administrator/templates/isis/less/template.less
+++ b/administrator/templates/isis/less/template.less
@@ -1168,3 +1168,7 @@ a.grid_true {
 		margin: 0;
 	}
 }
+.break-word {
+	word-break: break-all;
+	word-wrap: break-word;
+}
